# Rusty_Solitare

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT_PACK.md  CLAUDE_SPEC.md  CLAUDE_WORKFLOW.md  CREDITS.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  README_SERVER.md  SESSION_HANDOFF.md  build_wasm.sh  docker-compose.yml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.gitea/workflows/: android-build.yml  android-release.yml  builder-image.yml  docker-build.yml
.github/workflows/: ci.yml
.sqlx/: query-04d8dced0cc309bc0d968ab8f542a7f6c504ce7c2f682c0bef35dfe441ffb6e8.json  query-0e199cafab7e71b0c7f28ede85a622e38649d2fe5a73a5c715f2319f5450f729.json  query-15d08e02b102147bc74848ec3692b99edbf4c33078191f0132991ee94d4507b1.json  query-168e205e3eb832b78d085b48281a1bae74d5a0e64c4c793c18a6400605bacf76.json  query-2b814989a6632ca930ae1e895f97a7fc3389c91d1d2abf6900a21fb0d6e94ef3.json  query-3a9bd2e51b2389da5b7e85f26806fcffa896748e0b589d216cf60827fc3857a9.json  query-40db0910531d4418d4d58d31f0f8ea3894248406cc016020a6e211ed66da91c0.json  query-57c93a6acd7eea44d00412e62f0d3fed7ffbe4cd759353d29f38a8eb37f69112.json  query-5bc1984044bc792c2e9577a159ca22789469df14cb25144451f37e8cdad8165c.json  query-5e9e61cae887a08e4224fbea43a047c093bf5a4413499bfec858e302efa91bc3.json  query-6a36a96faa9d9b423aae3b72b0c049a1489b67ca2361581b2300bb4ee0bc9e2f.json  query-720edc3b85eec90744179f2c73ed9798814b734a2f3d57405ef95772ae66a24d.json  query-765c87463905b2edbf37f7416d5bc38e639c7e4c5feb0f5a9d8d6fb724e7a0a8.json  query-8697100790ebcdf4058812cf6debad8f9a13ac91c2d0ef20cff3bd4bb9385360.json  query-893c45c27854ba15ea611e8254ef980ced21dc64e6ca95fde56af513f86ffa46.json  query-a908d8d19647494f2ac2f801dc9c977f7ce23b44779da1567049856eab922645.json  query-a931c228c46dc06a5657d419cd5dfa5a810bbce9501845c92c6619d29806d70c.json  query-ab537795ba39fdd28c502a8b9e615f53e7cb08f3eddd8f0574f4dc8156436de5.json  query-c9ee5c64ca547f0c730379919a642bd649cbf81fc1804159101a70efabf08b33.json  query-ef7af925a8715c329dcafca5257c691e6bca31755eb5f54be47114f21fc04c8c.json  query-f23630e78ae88e72d7930184f7cd8fc67e71f3930609f1cf14061d35d6de8ec3.json  query-fae33e7159b43c756131b1545360dcb0250988b43550881e3f0a336d9516dd45.json
argocd/: application.yaml
deploy/: deployment.yaml  ingress-analytics.yaml  ingress.yaml  kustomization.yaml  mariadb-deployment.yaml  mariadb-pvc.yaml  mariadb-service.yaml  matomo-deployment.yaml  matomo-pvc.yaml  matomo-secret.yaml.example  matomo-service.yaml  middleware-analytics-auth.yaml  namespace.yaml  pvc.yaml  service.yaml
docker/: android-builder.Dockerfile
docs/: ANDROID.md  SESSION_HANDOFF.md  android_investigation.md  sync_test_runbook.md
docs/android/: PLAYABILITY_TODO.md
docs/superpowers/plans/: 2026-04-20-phase1-2-workspace-core.md  2026-04-23-phase4-statistics.md
docs/ui-mockups/: desktop-adaptation.md
pkg/ferrous-solitaire/: PKGBUILD
pkg/ferrous-solitaire-server/: PKGBUILD  ferrous-solitaire-server.service  server.env
pkg/solitaire-quest/: PKGBUILD
pkg/solitaire-quest-server/: PKGBUILD  server.env  solitaire-quest-server.service
scripts/: build_android_apk.sh  gen_classic_pngs.sh
solitaire_app/: Cargo.toml
solitaire_app/android/: AndroidManifest.xml
solitaire_app/src/: lib.rs  main.rs
solitaire_assetgen/: Cargo.toml
solitaire_core/: Cargo.toml
solitaire_core/src/: achievement.rs  card.rs  deck.rs  error.rs  game_state.rs  lib.rs  pile.rs  rules.rs  scoring.rs  solver.rs
solitaire_data/: Cargo.toml
solitaire_data/src/: achievements.rs  analytics_client.rs  android_keystore.rs  auth_tokens.rs  challenge.rs  lib.rs  matomo_client.rs  platform.rs  progress.rs  replay.rs  settings.rs  stats.rs  storage.rs  sync_client.rs  weekly.rs
solitaire_data/tests/: sync_round_trip.rs
solitaire_engine/: Cargo.toml
solitaire_engine/assets/themes/classic/: theme.ron
solitaire_engine/assets/themes/dark/: PROVENANCE.md  theme.ron
solitaire_engine/assets/themes/default/: theme.ron
solitaire_engine/assets/themes/rusty-pixel/: theme.ron
solitaire_engine/src/: achievement_plugin.rs  analytics_plugin.rs  animation_plugin.rs  audio_plugin.rs  auto_complete_plugin.rs  avatar_plugin.rs  card_plugin.rs  challenge_plugin.rs  cursor_plugin.rs  daily_challenge_plugin.rs  events.rs  feedback_anim_plugin.rs  font_plugin.rs  game_plugin.rs  help_plugin.rs  home_plugin.rs  hud_plugin.rs  input_plugin.rs  layout.rs  leaderboard_plugin.rs  lib.rs  onboarding_plugin.rs  pause_plugin.rs  play_by_seed_plugin.rs  profile_plugin.rs  progress_plugin.rs  radial_menu.rs  replay_overlay.rs  replay_playback.rs  resources.rs  safe_area.rs  selection_plugin.rs  settings_plugin.rs  splash_plugin.rs  stats_plugin.rs  sync_plugin.rs  sync_setup_plugin.rs  table_plugin.rs  time_attack_plugin.rs  ui_focus.rs  (+5 more)
solitaire_engine/src/assets/: icon_svg.rs  mod.rs  sources.rs  svg_loader.rs  user_dir.rs
solitaire_engine/src/card_animation/: animation.rs  curves.rs  interaction.rs  mod.rs  timing.rs  tuning.rs
solitaire_engine/src/theme/: importer.rs  loader.rs  manifest.rs  mod.rs  plugin.rs  registry.rs
solitaire_gpgs/: Cargo.toml
solitaire_gpgs/src/: android.rs  lib.rs  stub.rs
solitaire_server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
solitaire_server/migrations/: 001_initial.sql  002_replays.sql  003_refresh_tokens.sql  004_analytics.sql  005_avatar.sql  README.md
solitaire_server/src/: analytics.rs  auth.rs  challenge.rs  error.rs  leaderboard.rs  lib.rs  main.rs  middleware.rs  replays.rs  sync.rs
solitaire_server/tests/: server_tests.rs
solitaire_server/web/: account.html  game.css  game.html  game.js  home.html  index.html  leaderboard.html  replay.css  replay.js  replays.html
solitaire_server/web/pkg/: solitaire_wasm.js  solitaire_wasm_bg.wasm
solitaire_sync/: Cargo.toml
solitaire_sync/src/: achievements.rs  lib.rs  merge.rs  progress.rs  stats.rs
solitaire_wasm/src/: lib.rs
(+1 files in other folders)
