[package]
name    = "solitaire_app"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "solitaire_app"
path = "src/main.rs"

[dependencies]
bevy             = { workspace = true }
solitaire_engine = { workspace = true }
solitaire_data   = { workspace = true }
