[package]
name    = "solitaire_data"
version.workspace = true
edition.workspace = true

[dependencies]
solitaire_core = { workspace = true }
solitaire_sync = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
async-trait    = { workspace = true }
dirs           = { workspace = true }
keyring        = { workspace = true }
reqwest        = { workspace = true }
tokio          = { workspace = true }
