[package]
name    = "solitaire_data"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solitaire_core = { workspace = true }
solitaire_sync = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
async-trait    = { workspace = true }
dirs           = { workspace = true }
keyring-core   = { workspace = true }
reqwest        = { workspace = true }
tokio          = { workspace = true }

[dev-dependencies]
solitaire_server = { path = "../solitaire_server" }
solitaire_sync   = { workspace = true }
axum             = { workspace = true }
sqlx             = { workspace = true }
jsonwebtoken     = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
