[package]
name    = "solitaire_engine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy           = { workspace = true }
kira           = { workspace = true }
solitaire_core = { workspace = true }
solitaire_data = { workspace = true }
solitaire_sync = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
thiserror      = { workspace = true }
usvg           = { workspace = true }
resvg          = { workspace = true }
tiny-skia      = { workspace = true }
ron            = { workspace = true }
dirs           = { workspace = true }
zip            = { workspace = true }
arboard        = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile    = { workspace = true }
