[package]
name    = "solitaire_engine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy           = { workspace = true }
image          = { workspace = true }
reqwest        = { workspace = true }
kira           = { workspace = true }
solitaire_core = { workspace = true }
solitaire_data = { workspace = true }
solitaire_sync = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
usvg           = { workspace = true }
resvg          = { workspace = true }
tiny-skia      = { workspace = true }
ron            = { workspace = true }
dirs           = { workspace = true }
zip            = { workspace = true }

# `arboard` provides clipboard access for the Stats overlay's
# "Copy share link" button. The crate has no Android backend
# (its `platform::Clipboard` module is unimplemented for the
# android target — `cargo apk build` fails with E0433 if this is
# left unconditional). On Android the same button surfaces an
# informational toast instead; see
# `stats_plugin::handle_copy_share_link_button`.
[target.'cfg(not(target_os = "android"))'.dependencies]
arboard        = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni            = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile    = { workspace = true }
