[package]
name    = "solitaire_server"
version.workspace = true
edition.workspace = true

[lib]
name = "solitaire_server"
path = "src/lib.rs"

[[bin]]
name = "solitaire_server"
path = "src/main.rs"

[dependencies]
solitaire_sync     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
sqlx               = { workspace = true }
jsonwebtoken       = { workspace = true }
bcrypt             = { workspace = true }
tower_governor     = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }

[dev-dependencies]
tower          = { version = "0.5", features = ["util"] }
solitaire_sync = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
jsonwebtoken   = { workspace = true }
